# hf-models

./: .gitignore  pyproject.toml
hf_models/examples/: bert-yelp.ipynb  convnet-mnist.ipynb  spice-cnn-mnist.ipynb  spice-diffusion-niji.py
hf_models/models/spice_cnn/: configuration_spice_cnn.py  image_processing_spice_cnn.py  modeling_spice_cnn.py  register.py
hf_models/models/spice_waifu_diffusion/: spice-diffusion-niji.py
hf_models/notebooks/: convnet-mnist.ipynb
hf_models/notebooks/.ipynb_checkpoints/: convnet-mnist-checkpoint.ipynb
