[tool.poetry]
name = "hf-models"
version = "0.1.0"
description = "hosts hf-models"
authors = ["Ankush Patel <ankush@Ankushs-MacBook-Pro.local>"]
readme = "README.md"
packages = [{include = "hf_models"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
