[tool.poetry]
name = "hf-models"
version = "0.1.0"
description = "hosts hf-models"
authors = ["Ankush Patel <ankush@Ankushs-MacBook-Pro.local>"]
readme = "README.md"
packages = [{include = "hf_models"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"
numpy = "^1.24.3"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
ipykernel = "^6.23.1"
datasets = "^2.12.0"
transformers = "^4.29.2"
accelerate = "^0.19.0"
evaluate = "^0.4.0"
scikit-learn = "^1.2.2"
torchsummary = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
